Fix spelling/grammar: user guide, arch doc, READMEs, shell scripts
- user_guide.tex: 'permeates' -> 'permeate' (subject-verb agreement)
- user_guide.tex: 'an all below it' -> 'and all below it' (3 occurrences)
- user_guide.tex: 'an Ada package an unit testing' -> 'and unit testing'
- user_guide.tex: 'a error message' -> 'an error message'
- architecture_description_document.tex: 'without a queue' -> 'with a queue' (contradicted by following sentence about queue messages)
- src/README.md: 'data_structure/' -> 'data_structures/' (match actual dir name)
- src/data_structures/database/README.md: 'lookuplike' -> 'lookup like'
- gnd/matlab/copy_all_matlab_autocode.sh: fix usage message (said build_ not copy_)
- seq/doc/instructions.md: 'an sequence' -> 'a sequence'

--- a/doc/architecture_description_document/architecture_description_document.tex
+++ b/doc/architecture_description_document/architecture_description_document.tex
@@ -218,7 +218,7 @@ Components in the assembly are labeled with their \textit{name} first, followed 
 
 Note that some components in the assembly diagram are outlined in bold, while others are not. The boldness of the outline designates the component's \textit{execution} property as either \texttt{passive} or \texttt{active}. \texttt{Active} components are given a task in which to execute and are bolded in assembly diagrams. Passive components are not given a task, and are expected to be executed on the thread of calling components. In this assembly, there are 6 components, but only three tasks used to orchestrate their execution.
 
-Whether a component is \texttt{active} or \texttt{passive} greatly effects its behavior within an assembly. For instance, component with an internal queue is also \texttt{active}, by default it will block on its queue, waiting for work. When messages arrive asynchronously, it will execute on those messages when it is given time to run by the runtime or operating system scheduler. This design decision is usually good for tasks that are not real-time critical, and need to get work done on-demand in the background. The \texttt{logger\_Instance} component, shown in the assembly above, demonstrates this pattern. Conversely, if a component without a queue is \texttt{passive} and not given a task in which to execute, it must do work on the thread of a calling component. During this execution, the component might process a maximum number of messages from its queue. This is demonstrated by the \texttt{science\_Instance} component, which is called periodically to do work by the \texttt{rate\_Group\_Instance} component. In this scenario, the work done by the \texttt{science\_Instance} component is actually executed on the thread provided by the \texttt{rate\_Group\_Instance} component. When called, the \texttt{science\_Instance} component would perform a set amount of work, responding to commands in its queue and emitting telemetry from its instrument. This second method of scheduling is better for components that need to be executed in a real-time manner, as their execution times can be synced with other timing events throughout the system, and monitored for deadline overruns. 
+Whether a component is \texttt{active} or \texttt{passive} greatly effects its behavior within an assembly. For instance, component with an internal queue is also \texttt{active}, by default it will block on its queue, waiting for work. When messages arrive asynchronously, it will execute on those messages when it is given time to run by the runtime or operating system scheduler. This design decision is usually good for tasks that are not real-time critical, and need to get work done on-demand in the background. The \texttt{logger\_Instance} component, shown in the assembly above, demonstrates this pattern. Conversely, if a component with a queue is \texttt{passive} and not given a task in which to execute, it must do work on the thread of a calling component. During this execution, the component might process a maximum number of messages from its queue. This is demonstrated by the \texttt{science\_Instance} component, which is called periodically to do work by the \texttt{rate\_Group\_Instance} component. In this scenario, the work done by the \texttt{science\_Instance} component is actually executed on the thread provided by the \texttt{rate\_Group\_Instance} component. When called, the \texttt{science\_Instance} component would perform a set amount of work, responding to commands in its queue and emitting telemetry from its instrument. This second method of scheduling is better for components that need to be executed in a real-time manner, as their execution times can be synced with other timing events throughout the system, and monitored for deadline overruns. 
 
 Besides using assemblies to model the architecture of the entire embedded system, assemblies can also be tailored to address certain needs during testing. For instance, smaller, more focused assemblies can be used during development to answer specific questions, provide insight into trade studies, or to isolate testing to a single subsystem while not worrying about the complexity of the rest of the system. In this way, assemblies are adaptable to the changing needs of a project through its life cycle.
 
