--- a/doc/user_guide/user_guide.tex
+++ b/doc/user_guide/user_guide.tex
@@ -244,7 +244,7 @@ This section contains what you need to know in order to get started with Adamant
 
 \subsection{Project Setup} \label{Project Setup}
 
-One of the goals of Adamant is to produce highly modular embedded software. This goal does not end with the final deployed system, however. The same principles permeates through the implementation of Adamant and even to how one sets up their project. The Adamant framework itself is currently contained in a single repository that contains the generic code, generators, reusable components, and build system. What is not included in the Adamant repository is a final deployment of embedded software, known in Adamant as an \textit{assembly}. \textit{Assemblies}, by design, are always tailored to a specific project's requirements and target platform. In the Adamant ecosystem, this code is thought of as mission-specific code and thus is always contained in a repository separate from the Adamant framework, which is scoped to be generic and reusable. \\
+One of the goals of Adamant is to produce highly modular embedded software. This goal does not end with the final deployed system, however. The same principles permeate through the implementation of Adamant and even to how one sets up their project. The Adamant framework itself is currently contained in a single repository that contains the generic code, generators, reusable components, and build system. What is not included in the Adamant repository is a final deployment of embedded software, known in Adamant as an \textit{assembly}. \textit{Assemblies}, by design, are always tailored to a specific project's requirements and target platform. In the Adamant ecosystem, this code is thought of as mission-specific code and thus is always contained in a repository separate from the Adamant framework, which is scoped to be generic and reusable. \\
 
 When working with Adamant you will always have a minimum of 2 repositories, one that includes the Adamant framework, and another that contains your mission specific deployment, or \textit{assembly}. However, it may make sense to have 3, 4, or more repositories that make up your system. Adamant poses no limit on how you modularize your system, and allows you to tie the compilation of everything together via the \textit{build path}, which is detailed in Section \ref{The Build Path}. \\
 
@@ -489,9 +489,9 @@ In addition to specific commands, Adamant also provides a set of build commands 
   \item \textbf{\texttt{redo clean\_all}} - removes all \textit{build/} directories from this entire repository
   \item \textbf{\texttt{redo clear\_cache}} - remove the persistent model cache that the build system uses to increase performance, see Section \ref{The Model Cache}
   \item \textbf{\texttt{redo templates}} - finds and builds all autocoded templates (in \textit{build/template/}) that can be built from this directory
-  \item \textbf{\texttt{redo test\_all}} - finds and runs all unit tests from this directory an all below it. Note: Add a \textit{.skip\_test} file to a directory to exclude it from being run by \texttt{redo test\_all}.
-  \item \textbf{\texttt{redo coverage\_all}} - finds and runs all unit tests from this directory an all below it and generates coverage reports for each. Note: Add a \textit{.skip\_test} or \textit{.skip\_coverage} file to a directory to exclude it from being run by \texttt{redo coverage\_all}.
-  \item \textbf{\texttt{redo publish}} - builds all autocoded documentation from this directory an all below it, and copies over the ``published" version of that documentation
+  \item \textbf{\texttt{redo test\_all}} - finds and runs all unit tests from this directory and all below it. Note: Add a \textit{.skip\_test} file to a directory to exclude it from being run by \texttt{redo test\_all}.
+  \item \textbf{\texttt{redo coverage\_all}} - finds and runs all unit tests from this directory and all below it and generates coverage reports for each. Note: Add a \textit{.skip\_test} or \textit{.skip\_coverage} file to a directory to exclude it from being run by \texttt{redo coverage\_all}.
+  \item \textbf{\texttt{redo publish}} - builds all autocoded documentation from this directory and all below it, and copies over the ``published" version of that documentation
   \item \textbf{\texttt{redo targets}} - shows a list of all available \textit{build targets}, see Section \ref{The Build Target}
   \item \textbf{\texttt{redo prove}} - runs \texttt{GNATprove} to analyze any SPARK code found within the current directory, see Section \ref{Creating a SPARK Package}
   \item \textbf{\texttt{redo test}} - compiles and runs a unit test - note: this command is only available if a \textit{test.adb}, \textit{test.c(pp)}, or \textit{test.py} file is found in this directory
@@ -810,7 +810,7 @@ We can see that two directories were created under \textit{build/}: \textit{obj/
 
 A few things should be noted about this example. First, we did not need to add the \textit{hello\_world} directory to the \textit{build path}, see Section \ref{The Build Path}, since this is a main file, and will not be imported by any other package. Adamant automatically adds your current working directory to the \textit{build path} so was able to compile the program without issue. Second, a \texttt{redo run} rule will be available any time a \textit{main.adb} is found in a directory. This rule allows effortless compilation and running of any executable program, so long as it is named \texttt{main.adb}. You will likely end up with many \textit{main.adb} programs in your repository during development. Again, none of these directories should be added to the \textit{build path} because 1) they do not need to be and 2) there would be many name conflicts that violate the Adamant constraint of only allowing unique file names within the \textit{build path}. \\
 
-The next section further expands on this example by creating an Ada package an unit testing it.
+The next section further expands on this example by creating an Ada package and unit testing it.
 
 \subsection{Creating a Package}
 
@@ -1304,7 +1304,7 @@ This YAML model file above contains comments explaining whether or not each fiel
     \texttt{E5x10} & an array of ten 5-bit enumerations \\ \hline
 \end{xltabular}
 
-Ada uses the \textit{format} specification to understand the number of bits taken up by the type. If the number of bits specified in the representation field is not compatible with the type specified in the type field, the Ada compiler will warn or error, telling the user to fix the inconsistency. The enumeration portion of the \textit{format} is needed is to make the record visible to a ground system, such as Hydra. Adamant currently supports the display of many representations in Hydra including all signed and unsigned integers from 1 to 64 bits and floating point numbers of 32 and 64 precision and enumeration types. There is no support in Adamant or Hydra to display values with representations over 64 bits in length. The record should be further divided or an array \textit{format} should be used in this case. Note that an entire record's length must end on a 1 byte (8-bit) boundary, or a error message will be produced. Add additional fields of pad bytes to make the total length of the record end on an 8-bit boundary. \\
+Ada uses the \textit{format} specification to understand the number of bits taken up by the type. If the number of bits specified in the representation field is not compatible with the type specified in the type field, the Ada compiler will warn or error, telling the user to fix the inconsistency. The enumeration portion of the \textit{format} is needed is to make the record visible to a ground system, such as Hydra. Adamant currently supports the display of many representations in Hydra including all signed and unsigned integers from 1 to 64 bits and floating point numbers of 32 and 64 precision and enumeration types. There is no support in Adamant or Hydra to display values with representations over 64 bits in length. The record should be further divided or an array \textit{format} should be used in this case. Note that an entire record's length must end on a 1 byte (8-bit) boundary, or an error message will be produced. Add additional fields of pad bytes to make the total length of the record end on an 8-bit boundary. \\
 
 Note that packed records can also specify fields with types that are themselves other packed records (or packed arrays, discussed in Section \ref{Packed Arrays}). In this case, a \textit{format} specification for that field is not necessary. The concept of nesting packed records within other packed records is discussed further in Section \ref{Nested Packed Records}. Including records or arrays defined in raw Ada packages (ie. not modeled using Adamant) are not allowed to be included in packed records, since they are, by default, unpacked in representation and their lengths and bit layout is not known to the Adamant modeling system.
 
