Fix typo: 'data products products by' -> 'data products produced by'

--- a/gen/templates/component/name_data_products.tex
+++ b/gen/templates/component/name_data_products.tex
@@ -2,7 +2,7 @@
 %- if data_products.description
 \VAR{data_products.description} \\
 %- else
-\par Below is a list of the data products products by the \VAR{prettyname|e} component.
+\par Below is a list of the data products produced by the \VAR{prettyname|e} component.
 %- endif
 
 \captionof{table}{\VAR{prettyname|e} Data Products}
