Fix spelling in gen/templates: too/to, helpt/help, suppresss/suppress, lets/let's, buffed/buffer, indivitual/individual, checked an/at enqueue

--- a/gen/templates/tests/name.tex
+++ b/gen/templates/tests/name.tex
@@ -2,7 +2,7 @@
 %- if description
 \VAR{description|e} \\
 %- else
-Below is a description of the indivitual tests in the \VAR{name|e} unit test suite. \\
+Below is a description of the individual tests in the \VAR{name|e} unit test suite. \\
 %- endif
 \vspace{5mm} %5mm vertical space
 \begin{spaceditemize}
