Fix copy-paste errors in ccsds_router and ccsds_serial_interface
- ccsds_router: Fix mixed context view description (said 'passive')
- ccsds_router: Fix figure caption for mixed context (said 'passive')
- ccsds_router: Fix 'gleam' -> 'glean', 'assemble_name' -> 'assembly_name'
- ccsds_router: Fix comment 'Send packet 0 async' when sending packet 9
- ccsds_router: Fix comment 'sync' when actually sending async
- ccsds_router: Fix test_component connector descriptions (said 'Data products')
- ccsds_serial_interface: Fix 'send a receive' -> 'send and receive'
- ccsds_serial_interface: Fix 'Socket Interface' -> 'Serial Interface' throughout
- ccsds_serial_interface: Fix 'socket' -> 'serial port' in event descriptions
- ccsds_serial_interface: Fix 'as received' -> 'has received'

--- a/src/components/ccsds_router/doc/ccsds_router_context.tex
+++ b/src/components/ccsds_router/doc/ccsds_router_context.tex
@@ -22,7 +22,7 @@ It is also possible to achieve both synchronous and asynchronous routing using t
 
 \begin{figure}[H]
   \includegraphics[width=0.9\textwidth,center]{assembly/build/eps/context_mixed.eps}
-  \caption{Example usage of a passive CCSDS Router which routes packets on the thread of its caller.}
+  \caption{Example usage of a mixed CCSDS Router which supports both synchronous and asynchronous routing.}
 \end{figure}
 
 Note, there is a limitation with this use case. A CCSDS packet with the same APID should not be sent through both the synchronous and asynchronous invokee connectors at the same time if sequence number checking is enabled. Since the router table is not a protected object this could produce errant warnings about sequence number tracking, since it is expected that two updates to the sequence numbers tracked in this table will not occur to the same APID at the same time. There has been no real world use case identified which would require that the internal table become a protected object. If a use case is identified, this issue can be revisited.
