--- a/src/components/ccsds_router/gen/doc/ccsds_router_table_generator.tex
+++ b/src/components/ccsds_router/gen/doc/ccsds_router_table_generator.tex
@@ -15,13 +15,13 @@ Note the example shown in this documentation is used in the unit test of this co
 
 \section{Schema}
 
-The following pykwalify schema is used to validate the input YAML model. Model files must be named in the form \textit{optional\_name.assembly\_name.ccsds\_router\_table.yaml} where \textit{optional\_name} is the specific name of this router table and is only necessary if there is more than one CCSDS Router component instance in an assembly. The \textit{assemble\_name} is the assembly which this router table will be used in, and the rest of the model file name must remain as shown. Generally this file is created in the same directory or near to the assembly model file. The schema is commented to show what each of the available YAML keys are and what they accomplish. Even without knowing the specifics of pykwalify schemas, you should be able to gleam some knowledge from the file below.
+The following pykwalify schema is used to validate the input YAML model. Model files must be named in the form \textit{optional\_name.assembly\_name.ccsds\_router\_table.yaml} where \textit{optional\_name} is the specific name of this router table and is only necessary if there is more than one CCSDS Router component instance in an assembly. The \textit{assembly\_name} is the assembly which this router table will be used in, and the rest of the model file name must remain as shown. Generally this file is created in the same directory or near to the assembly model file. The schema is commented to show what each of the available YAML keys are and what they accomplish. Even without knowing the specifics of pykwalify schemas, you should be able to glean some knowledge from the file below.
 
 \yamlcodef{../schemas/ccsds_router_table.yaml}
 
 \section{Example Input}
 
-The following is an example routing table input yaml file. Model files must be named in the form \textit{optional\_name.assembly\_name.ccsds\_router\_table.yaml} where \textit{optional\_name} is the specific name of this router table and is only necessary if there is more than one CCSDS Router component instance in an assembly. The \textit{assemble\_name} is the assembly which this router table will be used in, and the rest of the model file name must remain as shown. Generally this file is created in the same directory or near to the assembly model file. This example adheres to the schema shown in the previous section, and is commented to give clarification.
+The following is an example routing table input yaml file. Model files must be named in the form \textit{optional\_name.assembly\_name.ccsds\_router\_table.yaml} where \textit{optional\_name} is the specific name of this router table and is only necessary if there is more than one CCSDS Router component instance in an assembly. The \textit{assembly\_name} is the assembly which this router table will be used in, and the rest of the model file name must remain as shown. Generally this file is created in the same directory or near to the assembly model file. This example adheres to the schema shown in the previous section, and is commented to give clarification.
 
 \yamlcodef{../../test/test_assembly/test_assembly.ccsds_router_table.yaml}
 
