Fix spelling/grammar: fauls->fails, incremending->incrementing, Listened->Listener, gather's->gathers, missing 'is'

--- a/src/components/interrupt_servicer/doc/interrupt_servicer_context.tex
+++ b/src/components/interrupt_servicer/doc/interrupt_servicer_context.tex
@@ -7,6 +7,6 @@ The following diagram shows an example of how the Interrupt Servicer component m
   \caption{Example usage of the Interrupt Servicer in an assembly acting as the periodic trigger for a control law.}
 \end{figure}
 
-The Interrupt Servicer is attached to the Real Time Control instance which requires periodic control data in order to operate. When an interrupt is triggered, the user's custom interrupt handler is called which gather's the interrupt control data, storing it in the \texttt{Control\_Data.T} record. The interrupt releases the Interrupt Servicer's internal task, which passes the \texttt{Control\_Data.T} record to the Real Time Control component by invoking the \texttt{Interrupt\_Data\_Type\_Send} connector. This effectively passes the execution context over to the Real Time Control component, which runs the control law using the newly captured data. After the Real Time Control component finishes execution, the Interrupt Servicer task waits until another interrupt is received. Upon the next interrupt, the whole process is completed again. 
+The Interrupt Servicer is attached to the Real Time Control instance which requires periodic control data in order to operate. When an interrupt is triggered, the user's custom interrupt handler is called which gathers the interrupt control data, storing it in the \texttt{Control\_Data.T} record. The interrupt releases the Interrupt Servicer's internal task, which passes the \texttt{Control\_Data.T} record to the Real Time Control component by invoking the \texttt{Interrupt\_Data\_Type\_Send} connector. This effectively passes the execution context over to the Real Time Control component, which runs the control law using the newly captured data. After the Real Time Control component finishes execution, the Interrupt Servicer task waits until another interrupt is received. Upon the next interrupt, the whole process is completed again. 
 
 Note that in this assembly design, the Real Time Control component must execute quickly, so as to not drop any interrupts that might occur while it is executing. To avoid dropping interrupts, the Real Time Control component can be made active, and its \texttt{Control\_Data\_T\_Recv\_Sync} can be instead made asynchronous. In this way, interrupts received before the Real Time Control component has finished executing will be queued up for processing as soon as the Real Time Control component has finished processing the previous data.
