docs: fix time-at-tone wording and tex typo

--- a/src/components/time_of_tone_master/doc/time_of_tone_master.tex
+++ b/src/components/time_of_tone_master/doc/time_of_tone_master.tex
@@ -70,6 +70,6 @@
 
 \subsection{Enumerations}
 
- Of\input{build/tex/time_of_tone_master_enums.tex}
+\input{build/tex/time_of_tone_master_enums.tex}
 
 \end{document}
